--- a/GameData/KerbalismConfig/Support/DECQ_Buran.cfg
+++ b/GameData/KerbalismConfig/Support/DECQ_Buran.cfg
@@ -64,21 +64,49 @@
 }
 
 //Replace the stock fuel cells with Kerbalism versions and remove the APU
-//https://science.ksc.nasa.gov/shuttle/technology/sts-newsref/sts-eps.html
-//Quote: The three fuel cells are capable of a maximum continuous output of 21,000 watts with 15-minute peaks of 36,000 watts.
+
 @PART[BURAN_ENGINE_MOUT]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
 {
-	//Disable resource draw from the rest of the orbiter to avoid hydrolox being consumed by engines, Fuel cells can still access it
-	%NoCrossFeedNodeKey = node_stack_Top
+	!MODULE[ModuleResourceConverter],* {}
+}
 
+//At most 5 pairs of tanks, each holding 92 lbs LH2 and 781 lbs LOX. LOX was also for crew
+//http://ftp.demec.ufpr.br/foguete/bibliografia/Energiya%20BURAN%20The%20Soviet%20Space%20Shuttle.pdf pg. 123
+//Four fuel cells with combined max continuous output 40kW, max peak 100kW
+//Produces over 100kg of water per day as reference on power consumption
+@PART[BURAN_FUSELASE]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
+{
+	//will be moving fuel cells to fuselage in RO config
 	!MODULE[ModuleResourceConverter],* {}
 
+	@MODULE[ModuleFuelTanks]
+	{
+		@volume = 8495
+		!TANK[Hydrogen] {}
+		TANK
+		{
+			//208.65249 kg with 5 tanks, does not match in game consumption, rescale by 17/9
+			name = LqdHydrogen
+			amount = 5563
+			maxAmount = 5563
+		}
+
+		!TANK[Oxygen] {}
+		TANK
+		{
+			//1771.2782 kg with 5 tanks, does not match in game consumption, rescale by 17/9
+			name = LqdOxygen
+			amount = 2932
+			maxAmount = 2932
+		}
+	}
+	
 	MODULE
 	{
 		name = ProcessController
 		resource = _FuelCell
 		title = Fuel Cell
-		capacity = 21 //Max continuous output
+		capacity = 40 //Max continuous output
 		running = true
 	}
 
@@ -101,35 +129,6 @@
 				id_field = resource
 				id_value = _FuelCell
 			}
-		}
-	}
-
-	!MODULE[ModuleFuelTanks] {}
-}
-
-//At most 5 pairs of tanks, each holding 92 lbs LH2 and 781 lbs LOX. LOX was also for crew
-//https://science.ksc.nasa.gov/shuttle/technology/sts-newsref/sts-eps.html
-@PART[BURAN_FUSELASE]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
-{
-	@MODULE[ModuleFuelTanks]
-	{
-		@volume = 8495
-		!TANK[Hydrogen] {}
-		TANK
-		{
-			//208.65249 kg with 5 tanks, does not match in game consumption, rescale by 17/9
-			name = LqdHydrogen
-			amount = 5563
-			maxAmount = 5563
-		}
-
-		!TANK[Oxygen] {}
-		TANK
-		{
-			//1771.2782 kg with 5 tanks, does not match in game consumption, rescale by 17/9
-			name = LqdOxygen
-			amount = 2932
-			maxAmount = 2932
 		}
 	}
 }
