--- a/GameData/KerbalismConfig/System/Parts.cfg
+++ b/GameData/KerbalismConfig/System/Parts.cfg
@@ -1073,6 +1073,97 @@
   }
 }
 
+//Buran
+//Same as shuttle, except with potassium scrubbers.
+@PART[BURAN_CABINE]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
+{
+  %capsuleScrubbers = true
+  %scrubberCapacity = 1.67
+  %capsuleOrigin = USSR
+
+  MODULE
+  {
+    name = ProcessController
+    resource = _PressureControl
+    title = N2 Pressure Controller
+    desc = Use <b>Nitrogen</b> to maintain the internal atmosphere at a comfortable pressure.
+    capacity = 1.67
+    toggle = true
+    running = true
+  }
+
+  MODULE
+  {
+    name = ProcessController
+    resource = _AirPump
+    title = Air Pump
+    capacity = 1.2
+    running = true
+  }
+
+  MODULE
+  {
+    name = ProcessController
+    resource = _LOXConverter
+    title = LOX to GOX Converter
+    capacity = 0.6
+    running = true
+  }
+
+  @MODULE[ProcessController],*
+  {
+    @capacity *= #$/CrewCapacity$
+  }
+
+  processConfigureExclude = true
+  MODULE
+  {
+    name = Configure
+    title = Processes
+    slots = 3
+
+    SETUP
+    {
+      name = Air Pump
+      desc = Pumps external atmosphere into the cabin to maintan internal pressure. Only works in breathable atmospheres
+      tech = crewSurvivability
+
+      MODULE
+      {
+        type = ProcessController
+        id_field = resource
+        id_value = _AirPump
+      }
+    }
+    SETUP
+    {
+      name = N2 Pressure Control
+      desc = Use <b>Nitrogen</b> to maintain the internal atmosphere at a comfortable pressure.
+      tech = earlyLifeSupport
+
+      MODULE
+      {
+        type = ProcessController
+        id_field = resource
+        id_value = _PressureControl
+      }
+    }
+    SETUP
+    {
+      name = LOX to GOX Converter
+      desc = Heats <b>LqdOxygen</b> to breathable <b>Oxygen</b>.
+      tech = earlyLifeSupport
+
+      MODULE
+      {
+        type = ProcessController
+        id_field = resource
+        id_value = _LOXConverter
+      }
+    }
+  }
+}
+
 //Add fuel cells to Mk3 here instead
 @PART[mk3Cockpit_Shuttle]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
 {
