Remove hydrazine tank cleanly

--- a/GameData/KerbalismConfig/Support/DECQ_Buran.cfg
+++ b/GameData/KerbalismConfig/Support/DECQ_Buran.cfg
@@ -63,11 +63,16 @@
 	}
 }
 
-//Replace the stock fuel cells with Kerbalism versions and remove the APU
+//Remove the built in APU and hydrazine tank
 
 @PART[BURAN_ENGINE_MOUT]:NEEDS[ProfileRealismOverhaul]:AFTER[RealismOverhaul]
 {
 	!MODULE[ModuleResourceConverter],* {}
+	@MODULE[ModuleFuelTanks]
+	{
+		@volume = 6207.7
+		!TANK[Hydrazine] {}
+	}
 }
 
 //At most 5 pairs of tanks, each holding 92 lbs LH2 and 781 lbs LOX. LOX was also for crew
