Update fuel tanks

--- a/GameData/KerbalismConfig/Support/DECQ_Buran.cfg
+++ b/GameData/KerbalismConfig/Support/DECQ_Buran.cfg
@@ -46,6 +46,12 @@
 			amount = 50760
 			maxAmount = 50760
 		}
+		TANK
+		{
+			name = PotassiumSuperoxide		
+			amount = 36
+			maxAmount = 108
+		}
 
 		TANK
 		{
@@ -70,7 +76,7 @@
 	!MODULE[ModuleResourceConverter],* {}
 	@MODULE[ModuleFuelTanks]
 	{
-		@volume = 6207.7
+		@volume = 4869.5
 		!TANK[Hydrazine] {}
 	}
 }
